--- a/Geolocalizacion.html
+++ b/Geolocalizacion.html
@@ -3,8 +3,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Buscador de noticias</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <title>Geolocalizacion</title>
         <script src="Geolocalizacion.js"></script>
         <link rel="stylesheet" href="Geolocalizacion.css"/>
     </head>
