--- a/Geolocalizacion.html
+++ b/Geolocalizacion.html
@@ -13,7 +13,7 @@
             <br>
             <section id="ubicacion">
                 <h2>Se visualizará el mapa</h2>
-                <input type="button" id="ubicacion" value="Obtener mapa estático" onClick = "posicion.getMapaEstaticoGoogle('ubicacion');"/>
+                <input type="button" id="boton" value="Obtener mapa estático" onClick = "posicion.getMapaEstaticoGoogle('ubicacion');"/>
             </section>
         </div>
     </body>
