--- a/Geolocalizacion.html
+++ b/Geolocalizacion.html
@@ -12,8 +12,7 @@
         <div class="container">
             <br>
             <section id="ubicacion">
-                <strong>A continuación se visualizará el mapa:</strong>
-                <h2>Mapa de su localización</h2>
+                <h2>Se visualizará el mapa</h2>
                 <input type="button" id="boton" value="Obtener mapa estático" onClick = "posicion.getMapaEstaticoGoogle('ubicacion');"/>
             </section>
         </div>
