--- a/Geolocalizacion.html
+++ b/Geolocalizacion.html
@@ -4,14 +4,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Geolocalizacion</title>
-        <meta name="viewport" content="initial-scale=1.0"/>
         <script src="Geolocalizacion.js"></script>
         <link rel="stylesheet" href="Geolocalizacion.css"/>
     </head>
     <body>
-        <h1>Mapa de afluencia de tráfico</h1>
-        <div id="mapa"></div>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU&callback=miMapa.initMap">
-        </script>
+        <h1>Geolocalización</h1>
+        <div class="container">
+            <strong>Déjenos obtener sus coordenadas.</strong>
+            <br>
+            <button id = "obtener" onclick = "posicion.show();">Obtener</button>
+            <ul class="coordenadas">
+                <li>Coordenadas</li>
+            </ul>
+        </div>
     </body>
 </html>
