--- a/Geolocalizacion.html
+++ b/Geolocalizacion.html
@@ -9,9 +9,8 @@
         <link rel="stylesheet" href="Geolocalizacion.css"/>
     </head>
     <body>
-        <h1>Mapa dinámico con centro</h1>
+        <h1>Geolocalización del usuario mapa dinámico de Google maps</h1>
         <div id="mapa"></div>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU&callback=mapaDinamicoGoogle.initMap">
-        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6j4mF6blrc4kZ54S6vYZ2_FpMY9VzyRU&callback=miMapa.initMap"></script>
     </body>
 </html>
